--- a/Web/GreenHouse/packages.config
+++ b/Web/GreenHouse/packages.config
@@ -17,5 +17,6 @@
   <package id="ServiceStack.Text" version="4.0.54" targetFramework="net45" />
   <package id="Unity" version="4.0.1" targetFramework="net45" />
   <package id="Unity.Mvc" version="4.0.1" targetFramework="net45" />
+  <package id="Unity.WebAPI" version="5.2.3" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net45" />
 </packages>
