--- a/Web/GreenHouse/Web.config
+++ b/Web/GreenHouse/Web.config
@@ -29,6 +29,12 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
+    <authentication mode="Forms">
+      <forms name=".FormsAuth" loginUrl="~/Account/Login" protection="All" slidingExpiration="false" requireSSL="false"></forms>
+    </authentication>
+    <authorization>
+      <deny users="?"/>
+    </authorization>
   </system.web>
 
   <system.webServer>
