--- a/Web/GreenHouse/GreenHouse.csproj
+++ b/Web/GreenHouse/GreenHouse.csproj
@@ -159,6 +159,7 @@
     <Compile Include="Api\SensorController.cs" />
     <Compile Include="App_Start\UnityConfig.cs" />
     <Compile Include="App_Start\UnityMvcActivator.cs" />
+    <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
@@ -168,6 +169,7 @@
     <Compile Include="Helpers\HashHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\DeviceViewModel.cs" />
+    <Compile Include="ViewModels\LoginUserViewModel.cs" />
     <Compile Include="ViewModels\NavLinkViewModel.cs" />
     <Compile Include="ViewModels\SensorDataViewModel.cs" />
     <Compile Include="ViewModels\SensorTypeViewModel.cs" />
@@ -246,6 +248,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Admin\Index.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Account\Login.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
