--- a/GreenHouseMicro/GreenHouseMicro/GreenHouseMicro.vcxproj.filters
+++ b/GreenHouseMicro/GreenHouseMicro/GreenHouseMicro.vcxproj.filters
@@ -21,5 +21,13 @@
     <ClInclude Include="__vm\.GreenHouseMicro.vsarduino.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Clock.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Clock.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
