--- a/GreenHouseMicro/GreenHouseMicro/GreenHouseMicro.vcxproj
+++ b/GreenHouseMicro/GreenHouseMicro/GreenHouseMicro.vcxproj
@@ -61,7 +61,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>C:\Program Files (x86)\Arduino\hardware\arduino\avr\cores\arduino;C:\Program Files (x86)\Arduino\hardware\arduino\avr\variants\mega;D:\GitHub\Greenhouse\Greenhouse\GreenHouseMicro\GreenHouseMicro;C:\Users\Admin\Documents\Arduino\libraries\ethercard-master;C:\Users\Admin\Documents\Arduino\libraries\ethercard-master\utility;C:\Users\Admin\Documents\Arduino\libraries\Time-master;C:\Users\Admin\Documents\Arduino\libraries\Time-master\utility;C:\Program Files (x86)\Arduino\libraries;C:\Program Files (x86)\Arduino\hardware\arduino\avr\libraries;C:\Program Files (x86)\Microsoft Visual Studio 11.0\Common7\IDE\Extensions\15bgrhxo.2kj\Micro Platforms\default\debuggers;C:\Users\Admin\Documents\Arduino\libraries;C:\Program Files (x86)\Arduino\hardware\arduino\avr\cores\arduino;C:\Program Files (x86)\Arduino\hardware\arduino\avr\variants\mega;C:\Users\Admin\Documents\Arduino\libraries\ethercard-master;C:\Users\Admin\Documents\Arduino\libraries\Time-master;C:\Program Files (x86)\Arduino\libraries;C:\Program Files (x86)\Arduino\hardware\arduino\avr\libraries;C:\Program Files (x86)\Microsoft Visual Studio 11.0\Common7\IDE\Extensions\15bgrhxo.2kj\Micro Platforms\default\debuggers;C:\Users\Admin\Documents\Arduino\libraries;C:\Program Files (x86)\Arduino\hardware\tools\avr/avr/include/;C:\Program Files (x86)\Arduino\hardware\tools\avr//avr/include/avr/;C:\Program Files (x86)\Arduino\hardware\tools\avr/lib\gcc\avr\4.8.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Program Files (x86)\Arduino\hardware\arduino\avr\cores\arduino;C:\Program Files (x86)\Arduino\hardware\arduino\avr\variants\mega;D:\GitHub\Greenhouse\Greenhouse\GreenHouseMicro\GreenHouseMicro;C:\Users\Admin\Documents\Arduino\libraries\DHT-sensor-library-master;C:\Users\Admin\Documents\Arduino\libraries\DHT-sensor-library-master\utility;C:\Users\Admin\Documents\Arduino\libraries\ethercard-master;C:\Users\Admin\Documents\Arduino\libraries\ethercard-master\utility;C:\Users\Admin\Documents\Arduino\libraries\Time-master;C:\Users\Admin\Documents\Arduino\libraries\Time-master\utility;C:\Program Files (x86)\Arduino\libraries;C:\Program Files (x86)\Arduino\hardware\arduino\avr\libraries;C:\Program Files (x86)\Microsoft Visual Studio 11.0\Common7\IDE\Extensions\15bgrhxo.2kj\Micro Platforms\default\debuggers;C:\Users\Admin\Documents\Arduino\libraries;C:\Program Files (x86)\Arduino\hardware\arduino\avr\cores\arduino;C:\Program Files (x86)\Arduino\hardware\arduino\avr\variants\mega;C:\Users\Admin\Documents\Arduino\libraries\DHT-sensor-library-master;C:\Users\Admin\Documents\Arduino\libraries\ethercard-master;C:\Users\Admin\Documents\Arduino\libraries\Time-master;C:\Program Files (x86)\Arduino\libraries;C:\Program Files (x86)\Arduino\hardware\arduino\avr\libraries;C:\Program Files (x86)\Microsoft Visual Studio 11.0\Common7\IDE\Extensions\15bgrhxo.2kj\Micro Platforms\default\debuggers;C:\Users\Admin\Documents\Arduino\libraries;C:\Program Files (x86)\Arduino\hardware\tools\avr/avr/include/;C:\Program Files (x86)\Arduino\hardware\tools\avr//avr/include/avr/;C:\Program Files (x86)\Arduino\hardware\tools\avr/lib\gcc\avr\4.8.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <ForcedIncludeFiles>D:\GitHub\Greenhouse\Greenhouse\GreenHouseMicro\GreenHouseMicro\__vm\.GreenHouseMicro.vsarduino.h;%(ForcedIncludeFiles)</ForcedIncludeFiles>
       <WholeProgramOptimization>false</WholeProgramOptimization>
       <PreprocessorDefinitions>__AVR_ATmega2560__;F_CPU=16000000L;ARDUINO=10608;ARDUINO_AVR_MEGA2560;ARDUINO_ARCH_AVR;__cplusplus=201103L;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -78,11 +78,11 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Clock.h" />
+    <ClInclude Include="SensorData.h" />
     <ClInclude Include="__vm\.GreenHouseMicro.vsarduino.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Clock.cpp" />
+    <ClCompile Include="SensorData.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
