UI improvement and some fix

--- a/Web/GreenHouse/Web.config
+++ b/Web/GreenHouse/Web.config
@@ -32,9 +32,9 @@
     <authentication mode="Forms">
       <forms name=".FormsAuth" loginUrl="~/Account/Login" protection="All" slidingExpiration="false" requireSSL="false"></forms>
     </authentication>
-    <authorization>
+    <!--<authorization>
       <deny users="?"/>
-    </authorization>
+    </authorization>-->
   </system.web>
 
   <system.webServer>
