--- a/Web/GreenHouse.Repository/packages.config
+++ b/Web/GreenHouse.Repository/packages.config
@@ -5,4 +5,5 @@
   <package id="ServiceStack.OrmLite" version="4.0.54" targetFramework="net45" />
   <package id="ServiceStack.OrmLite.SqlServer" version="4.0.54" targetFramework="net45" />
   <package id="ServiceStack.Text" version="4.0.54" targetFramework="net45" />
+  <package id="System.Linq.Dynamic" version="1.0.6" targetFramework="net45" />
 </packages>
