--- a/GreenHouseMicro/GreenHouseMicro/GreenHouseMicro.vcxproj.filters
+++ b/GreenHouseMicro/GreenHouseMicro/GreenHouseMicro.vcxproj.filters
@@ -24,9 +24,24 @@
     <ClInclude Include="SensorData.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Crypto.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="osapi.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="user_config.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="device_config.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SensorData.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Crypto.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
