--- a/Web/GreenHouse/GreenHouse.csproj
+++ b/Web/GreenHouse/GreenHouse.csproj
@@ -169,6 +169,7 @@
     <Compile Include="Helpers\ActiveNavHelper.cs" />
     <Compile Include="Helpers\HashHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\DataSet.cs" />
     <Compile Include="ViewModels\SensorViewModel.cs" />
     <Compile Include="ViewModels\DeviceViewModel.cs" />
     <Compile Include="ViewModels\LoginUserViewModel.cs" />
@@ -186,6 +187,10 @@
     <Content Include="Content\Styles\bootstrap.min.css" />
     <Content Include="Global.asax" />
     <Content Include="Script\bootstrap.min.js" />
+    <Content Include="Script\Chart.bundle.js" />
+    <Content Include="Script\Chart.bundle.min.js" />
+    <Content Include="Script\Chart.js" />
+    <Content Include="Script\Chart.min.js" />
     <Content Include="Script\jquery-1.11.3.min.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -260,6 +265,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Home\AddSensor.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\PublishProfiles\Deploy.pubxml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
