--- a/Web/GreenHouse/packages.config
+++ b/Web/GreenHouse/packages.config
@@ -1,15 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
+  <package id="jQuery" version="1.6.4" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR" version="2.2.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.2.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.JS" version="2.2.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.Owin" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net45" />
+  <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="ServiceStack.Common" version="4.0.54" targetFramework="net45" />
   <package id="ServiceStack.Interfaces" version="4.0.54" targetFramework="net45" />
   <package id="ServiceStack.OrmLite" version="4.0.54" targetFramework="net45" />
