--- a/Web/FunWithEf/FunWithEf.csproj
+++ b/Web/FunWithEf/FunWithEf.csproj
@@ -4,15 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5A2EBA1B-FAE7-41D1-B282-3DDCA3BCABFB}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{43BB64EC-AFF8-4B56-8F09-489AFCF56BF1}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>GreenHouse.Interfaces</RootNamespace>
-    <AssemblyName>GreenHouse.Interfaces</AssemblyName>
+    <RootNamespace>FunWithEf</RootNamespace>
+    <AssemblyName>FunWithEf</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +23,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -30,7 +32,19 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="HibernatingRhinos.Profiler.Appender">
+      <HintPath>..\..\..\..\..\tmp\EntityFramework.Profiler-v3.0-Build-3103\HibernatingRhinos.Profiler.Appender.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -39,20 +53,31 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ApiModels\GreenHouseDataMessage.cs" />
-    <Compile Include="ApiModels\HumidityData.cs" />
-    <Compile Include="ApiModels\SensorDataMessage.cs" />
-    <Compile Include="Enums\FilterByTime.cs" />
-    <Compile Include="Enums\GroupByTime.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repository\IDeviceDataRepository.cs" />
-    <Compile Include="Repository\IRepository.cs" />
-    <Compile Include="Repository\ISensorDataRepository.cs" />
-    <Compile Include="Requests\GetGroupedSensorDataRequest.cs" />
-    <Compile Include="Responses\AddSensorDataResponse.cs" />
-    <Compile Include="Responses\GetGroupedSensorDataResponse.cs" />
-    <Compile Include="Responses\SensorDataGrouped.cs" />
-    <Compile Include="Responses\SensorDataResponse.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GreenHouse.EfRepository\GreenHouse.EfRepository.csproj">
+      <Project>{ea50bfde-b41f-493f-8884-6f8337846db7}</Project>
+      <Name>GreenHouse.EfRepository</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\GreenHouse.Interfaces\GreenHouse.Interfaces.csproj">
+      <Project>{5a2eba1b-fae7-41d1-b282-3ddca3bcabfb}</Project>
+      <Name>GreenHouse.Interfaces</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
