--- a/Web/GreenHouse/Web.config
+++ b/Web/GreenHouse/Web.config
@@ -3,8 +3,11 @@
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
-
 <configuration>
+  <configSections>
+    
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -12,13 +15,13 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
-
+  <connectionStrings>
+    <!--<add name="GreenHouseDbEntities" connectionString="Data Source=(local);Initial Catalog=GreenHouseDb;Integrated Security=True" providerName="System.Data.EntityClient" />-->
+    <add name="GreenHouseDbEntities" connectionString="metadata=res://*/DbGreenhouse.csdl|res://*/DbGreenhouse.ssdl|res://*/DbGreenhouse.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=GreenHouseDb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <system.web>
-    
     <httpRuntime targetFramework="4.5" />
-    
     <compilation debug="true" targetFramework="4.5" />
-
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
@@ -36,16 +39,15 @@
       <deny users="?"/>
     </authorization>-->
   </system.web>
-
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
-     
-  <handlers>
+    <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers></system.webServer>
+    </handlers>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -66,4 +68,10 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
