--- a/Web/Greenhouse.Core/Greenhouse.Core.csproj
+++ b/Web/Greenhouse.Core/Greenhouse.Core.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5A2EBA1B-FAE7-41D1-B282-3DDCA3BCABFB}</ProjectGuid>
+    <ProjectGuid>{FD579BC6-6BEB-42DB-9779-2571AE348D62}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>GreenHouse.Interfaces</RootNamespace>
-    <AssemblyName>GreenHouse.Interfaces</AssemblyName>
+    <RootNamespace>Greenhouse.Core</RootNamespace>
+    <AssemblyName>Greenhouse.Core</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,20 +39,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ApiModels\GreenHouseDataMessage.cs" />
-    <Compile Include="ApiModels\HumidityData.cs" />
-    <Compile Include="ApiModels\SensorDataMessage.cs" />
-    <Compile Include="Enums\FilterByTime.cs" />
-    <Compile Include="Enums\GroupByTime.cs" />
+    <Compile Include="Constants.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repository\IDeviceDataRepository.cs" />
-    <Compile Include="Repository\IRepository.cs" />
-    <Compile Include="Repository\ISensorDataRepository.cs" />
-    <Compile Include="Requests\GetGroupedSensorDataRequest.cs" />
-    <Compile Include="Responses\AddSensorDataResponse.cs" />
-    <Compile Include="Responses\GetGroupedSensorDataResponse.cs" />
-    <Compile Include="Responses\SensorDataGrouped.cs" />
-    <Compile Include="Responses\SensorDataResponse.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GreenHouse.Interfaces\GreenHouse.Interfaces.csproj">
+      <Project>{5a2eba1b-fae7-41d1-b282-3ddca3bcabfb}</Project>
+      <Name>GreenHouse.Interfaces</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
