Bug fix for grouped by time sensor data

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,19 @@
 /GreenHouseMicro/StaticIp/Release
 /GreenHouseMicro/TestWebClient/Release
 /GreenHouseMicro/WiFiTest/Release
+*.suo
+/GreenHouseMicro/CryptoTest/obj/Debug
+/GreenHouseMicro/TcpListener/bin/Debug
+/GreenHouseMicro/TcpListener/obj/Debug
+/GreenHouseMicro/GreenHouseMicro.VC.db
+/Web/.vs/config/applicationhost.config
+/Web/DeviceSimulator/bin/Debug
+/Web/DeviceSimulator/obj/Debug
+/Web/FunWithEf/bin/Debug
+/Web/FunWithEf/obj/Debug
+/Web/Greenhouse.Core/bin/Debug
+/Web/Greenhouse.Core/obj/Debug
+/Web/GreenHouse.EfRepository/bin/Debug
+/Web/GreenHouse.EfRepository/obj/Debug
+/Web/PasswordHashGenerator/bin/Debug
+/Web/PasswordHashGenerator/obj/Debug
