--- a/Web/GreenHouse/Web.config
+++ b/Web/GreenHouse/Web.config
@@ -16,8 +16,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <!--<add name="GreenHouseDbEntities" connectionString="Data Source=(local);Initial Catalog=GreenHouseDb;Integrated Security=True" providerName="System.Data.EntityClient" />-->
-    <add name="GreenHouseDbEntities" connectionString="metadata=res://*/DbGreenhouse.csdl|res://*/DbGreenhouse.ssdl|res://*/DbGreenhouse.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=GreenHouseDb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="GreenHouseForOrmLight" connectionString="Data Source=(localdb)\ProjectsV13;Initial Catalog=GreenhouseDb;Integrated Security=True" providerName="System.Data.EntityClient" />
+    <add name="GreenHouseDbEntities" connectionString="metadata=res://*/DbGreenhouse.csdl|res://*/DbGreenhouse.ssdl|res://*/DbGreenhouse.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\ProjectsV13;initial catalog=GreenhouseDb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.web>
     <httpRuntime targetFramework="4.5" />
