--- a/Web/GreenHouse.Interfaces/GreenHouse.Interfaces.csproj
+++ b/Web/GreenHouse.Interfaces/GreenHouse.Interfaces.csproj
@@ -44,6 +44,7 @@
     <Compile Include="ApiModels\SensorDataMessage.cs" />
     <Compile Include="Enums\FilterByTime.cs" />
     <Compile Include="Enums\GroupByTime.cs" />
+    <Compile Include="NameHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\IDeviceDataRepository.cs" />
     <Compile Include="Repository\IRepository.cs" />
