Restore project on new system

--- a/Web/GreenHouse/Web.config
+++ b/Web/GreenHouse/Web.config
@@ -16,8 +16,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="GreenHouseForOrmLight" connectionString="Data Source=(localdb)\ProjectsV13;Initial Catalog=GreenhouseDb2;Integrated Security=True" providerName="System.Data.EntityClient" />
-    <add name="GreenHouseDbEntities" connectionString="metadata=res://*/DbGreenhouse.csdl|res://*/DbGreenhouse.ssdl|res://*/DbGreenhouse.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\ProjectsV13;initial catalog=GreenhouseDb2;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="GreenHouseForOrmLight" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=GreenhouseDb;Integrated Security=True" providerName="System.Data.EntityClient" />
+    <add name="GreenHouseDbEntities" connectionString="metadata=res://*/DbGreenhouse.csdl|res://*/DbGreenhouse.ssdl|res://*/DbGreenhouse.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;Initial Catalog=GreenhouseDb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.web>
     <httpRuntime targetFramework="4.5" />
