--- a/Web/GreenhouseApp/GreenhouseApp/GreenhouseApp.csproj
+++ b/Web/GreenhouseApp/GreenhouseApp/GreenhouseApp.csproj
@@ -57,7 +57,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Net.Http">
-      <HintPath>..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.5\System.Net.Http.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\.nuget\packages\system.net.http\4.3.3\lib\net46\System.Net.Http.dll</HintPath>
     </Reference>
     <Reference Include="Xamarin.Forms.Core, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Xamarin.Forms.2.3.3.180\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.Core.dll</HintPath>
