--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,10 @@
 /Web/GreenhouseApp/GreenhouseApp.iOS/obj/iPhone/Debug
 /Web/GreenhouseApp/GreenhouseApp.Windows/obj/Debug
 /Web/PasswordHashGenerator/bin/Release
+/GreenHouseMicro/CryptoTest/obj/Release/CryptoTest.csproj.CoreCompileInputs.cache
+/Web/GreenhouseApp/GreenhouseApp/obj/Release
+.vs/slnx.sqlite
+.vs/VSWorkspaceState.json
+Web/.vs/GreenHouse/v15/sqlite3/storage.ide
+Web/GreenHouse.Database/GreenHouse.Database.jfm
+Web/UpgradeLog.htm
