--- a/Web/GreenHouse/GreenHouse.csproj
+++ b/Web/GreenHouse/GreenHouse.csproj
@@ -249,6 +249,7 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </Content>
+    <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Scripts\jquery-1.6.4-vsdoc.js" />
     <Content Include="Scripts\ChartDataLogic.js" />
     <Content Include="Scripts\jquery-1.6.4.js" />
